[project]
name = "repertoire-api"
version = "0.1.0"
description = "API for repertoire tasks"
authors = [
    {name = "Tomas Sheers"},
]
dependencies = [
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0.post1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "E501",
    "F811",
    "F541",
    "F841"
]
